--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/happy_travel
+spring.datasource.url=jdbc:postgresql://localhost:5432/film_radar
 spring.datasource.username=postgres
 spring.datasource.password=Paola07
