--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,10 @@
 			<version>5.0.0</version> <!-- Usa la versión que sea compatible con tu entorno -->
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
