--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
+
+tmdb.api.key=5c5537114c1c54887007ac4ddd9ad0cc
+tmdb.api.url=https://api.themoviedb.org/3
